@@ -48,8 +48,10 @@ GPB::Message* CLONE(const GPB::Message* origin) {
  * @param file proto file name
  */
 SEXP readProtoFiles(SEXP file, SEXP dirs) {
+    BEGIN_RCPP
     DescriptorPoolLookup::importProtoFiles(file, dirs);
     return R_NilValue;
+    END_RCPP
 }
 
 /**
